objects/Asset__x.object
<CustomObject>
    <fields>
        <fullName>IB_Status_modif_c__c</fullName>
        <externalDeveloperName>IB_Status_modif__c</externalDeveloperName>
        <label>-Status</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inactive_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Inactive__c</externalDeveloperName>
        <label>Inactive</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InstallDate__c</fullName>
        <externalDeveloperName>InstallDate</externalDeveloperName>
        <label>Install Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InstalledBase_c__c</fullName>
        <externalDeveloperName>InstalledBase__c</externalDeveloperName>
        <label>Installed Base</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interface_Error_Message_c__c</fullName>
        <externalDeveloperName>Interface_Error_Message__c</externalDeveloperName>
        <label>Interface Error Message</label>
        <length>130000</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interface_Status_c__c</fullName>
        <externalDeveloperName>Interface_Status__c</externalDeveloperName>
        <label>Interface Status</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interfaced_c__c</fullName>
        <externalDeveloperName>Interfaced__c</externalDeveloperName>
        <label>Interfaced</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Interfaced</fullName>
                </value>
                <value>
                    <fullName>Not Interfaced</fullName>
                </value>
                <value>
                    <fullName>Epicenter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsCompetitorProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsCompetitorProduct</externalDeveloperName>
        <label>Competitor Asset</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInternal__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsInternal</externalDeveloperName>
        <label>Internal Asset</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LISconnectionDate_c__c</fullName>
        <externalDeveloperName>LISconnectionDate__c</externalDeveloperName>
        <label>LIS Connection Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LISconnectionType_c__c</fullName>
        <externalDeveloperName>LISconnectionType__c</externalDeveloperName>
        <label>LIS Connection Type</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                    <label>10 - Mono-directional</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>20 - Bi-directional</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LISsoftwareName_c__c</fullName>
        <externalDeveloperName>LISsoftwareName__c</externalDeveloperName>
        <label>LIS Software Name</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>0 - UNKNOWN</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>1 - ACK</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>10 - McKessen Software</label>
                </value>
                <value>
                    <fullName>100</fullName>
                    <label>100 - Soft</label>
                </value>
                <value>
                    <fullName>1000</fullName>
                    <label>1000 - HLAB</label>
                </value>
                <value>
                    <fullName>1001</fullName>
                    <label>1001 - Antrim</label>
                </value>
                <value>
                    <fullName>1002</fullName>
                    <label>1002 - Aspira-CCA</label>
                </value>
                <value>
                    <fullName>1003</fullName>
                    <label>1003 - CHCS</label>
                </value>
                <value>
                    <fullName>1004</fullName>
                    <label>1004 - CIS</label>
                </value>
                <value>
                    <fullName>1005</fullName>
                    <label>1005 - Citation</label>
                </value>
                <value>
                    <fullName>1006</fullName>
                    <label>1006 - Dairyland</label>
                </value>
                <value>
                    <fullName>1007</fullName>
                    <label>1007 - Data Innovations</label>
                </value>
                <value>
                    <fullName>1008</fullName>
                    <label>1008 - Fletcher Flora/FlexiSweet</label>
                </value>
                <value>
                    <fullName>1009</fullName>
                    <label>1009 - Fletcher Flora/LabPak</label>
                </value>
                <value>
                    <fullName>101</fullName>
                    <label>101 - Paragon</label>
                </value>
                <value>
                    <fullName>1010</fullName>
                    <label>1010 - GE Healthcare Triple G</label>
                </value>
                <value>
                    <fullName>1011</fullName>
                    <label>1011 - Hex</label>
                </value>
                <value>
                    <fullName>1012</fullName>
                    <label>1012 - HMS</label>
                </value>
                <value>
                    <fullName>1013</fullName>
                    <label>1013 - Horizon/Hlab McKesson</label>
                </value>
                <value>
                    <fullName>1014</fullName>
                    <label>1014 - LabCorp LCWS</label>
                </value>
                <value>
                    <fullName>1015</fullName>
                    <label>1015 - Labdaq/Antek</label>
                </value>
                <value>
                    <fullName>1016</fullName>
                    <label>1016 - Marshfield</label>
                </value>
                <value>
                    <fullName>1017</fullName>
                    <label>1017 - McKesson HBO/Star</label>
                </value>
                <value>
                    <fullName>1018</fullName>
                    <label>1018 - Meditech HCA accounts</label>
                </value>
                <value>
                    <fullName>1020</fullName>
                    <label>1020 - Misys</label>
                </value>
                <value>
                    <fullName>1021</fullName>
                    <label>1021 - Opus</label>
                </value>
                <value>
                    <fullName>1022</fullName>
                    <label>1022 - Rubicon</label>
                </value>
                <value>
                    <fullName>1023</fullName>
                    <label>1023 - Siemens Novius</label>
                </value>
                <value>
                    <fullName>1024</fullName>
                    <label>1024 - Stellara</label>
                </value>
                <value>
                    <fullName>1025</fullName>
                    <label>1025 - Ulticare</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LISsoftwareVersion_c__c</fullName>
        <externalDeveloperName>LISsoftwareVersion__c</externalDeveloperName>
        <label>LIS Software Version</label>
        <length>30</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastCalibrationDate_c__c</fullName>
        <externalDeveloperName>LastCalibrationDate__c</externalDeveloperName>
        <label>Last Calibration Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_PM_Date_c__c</fullName>
        <externalDeveloperName>Last_PM_Date__c</externalDeveloperName>
        <label>Last PM Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LicenseID_c__c</fullName>
        <externalDeveloperName>LicenseID__c</externalDeveloperName>
        <label>License ID</label>
        <length>30</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationId__c</fullName>
        <externalDeveloperName>LocationId</externalDeveloperName>
        <label>Location ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaintenancePlan_c__c</fullName>
        <externalDeveloperName>MaintenancePlan__c</externalDeveloperName>
        <inlineHelpText>The Last Maintenance Plan on this Asset.</inlineHelpText>
        <label>Last Maintenance Plan</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_c__c</fullName>
        <externalDeveloperName>Market__c</externalDeveloperName>
        <inlineHelpText>This field is automatically populated once the Asset is created.</inlineHelpText>
        <label>Market</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0010</fullName>
                    <label>0010 - Clinical</label>
                </value>
                <value>
                    <fullName>0020</fullName>
                    <label>0020 - Industry</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MediaType_c__c</fullName>
        <externalDeveloperName>MediaType__c</externalDeveloperName>
        <label>Media Type</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ZIP</fullName>
                </value>
                <value>
                    <fullName>USB</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mirrored_IB_RT_c__c</fullName>
        <externalDeveloperName>Mirrored_IB_RT__c</externalDeveloperName>
        <label>Mirrored_IB_RT</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModemNumber_c__c</fullName>
        <externalDeveloperName>ModemNumber__c</externalDeveloperName>
        <label>Modem Number</label>
        <length>30</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModificationStatus_c__c</fullName>
        <externalDeveloperName>ModificationStatus__c</externalDeveloperName>
        <label>Modification Status</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Validate</fullName>
                </value>
                <value>
                    <fullName>Reset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>My_Tools_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>My_Tools__c</externalDeveloperName>
        <inlineHelpText>Tech Field To filter Tools list views on current user's Tools</inlineHelpText>
        <label>My Tools</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Asset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_PM_Date_c__c</fullName>
        <externalDeveloperName>Next_PM_Date__c</externalDeveloperName>
        <label>Next PM Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NumberOfMBDrawers_c__c</fullName>
        <externalDeveloperName>NumberOfMBDrawers__c</externalDeveloperName>
        <label>Number of MB Drawers</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Tests_per_Year_c__c</fullName>
        <externalDeveloperName>Number_of_Tests_per_Year__c</externalDeveloperName>
        <label>Number of Tests per Year</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ObservaConnectedTo_c__c</fullName>
        <externalDeveloperName>ObservaConnectedTo__c</externalDeveloperName>
        <label>Observa Connected To</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                    <label>10 - VITEK</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>20 - BTA</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>30 - VITEK + BTA</label>
                </value>
                <value>
                    <fullName>40</fullName>
                    <label>40 - MYLA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PM_Interval_c__c</fullName>
        <externalDeveloperName>PM_Interval__c</externalDeveloperName>
        <label>PM Interval</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMfamily_c__c</fullName>
        <externalDeveloperName>PMfamily__c</externalDeveloperName>
        <label>PM Family</label>
        <length>100</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentAssetSAPNumber_c__c</fullName>
        <externalDeveloperName>ParentAssetSAPNumber__c</externalDeveloperName>
        <label>Parent Asset SAP Number</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <externalDeveloperName>ParentId</externalDeveloperName>
        <label>Parent Asset ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_c__c</fullName>
        <externalDeveloperName>Plant__c</externalDeveloperName>
        <label>Plant</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AR01</fullName>
                    <label>AR01 - BIOMERIEUX ARGENTINA S.A.</label>
                </value>
                <value>
                    <fullName>AT01</fullName>
                    <label>AT01 - BIOMERIEUX AUSTRIA GMBH</label>
                </value>
                <value>
                    <fullName>AU01</fullName>
                    <label>AU01 - bioMerieux Australia Pty Ltd</label>
                </value>
                <value>
                    <fullName>AU03</fullName>
                    <label>AU03 - bioMerieux Australia Pty Ltd</label>
                </value>
                <value>
                    <fullName>BE01</fullName>
                    <label>BE01 - BIOMERIEUX BENELUX</label>
                </value>
                <value>
                    <fullName>BR01</fullName>
                    <label>BR01 - BIOMERIEUX BRAZIL - RJ</label>
                </value>
                <value>
                    <fullName>BR02</fullName>
                    <label>BR02 - BIOMERIEUX BRAZIL - SP</label>
                </value>
                <value>
                    <fullName>CA01</fullName>
                    <label>CA01 - BIOMERIEUX Montreal</label>
                </value>
                <value>
                    <fullName>CA02</fullName>
                    <label>CA02 - BIOMERIEUX Vancouver</label>
                </value>
                <value>
                    <fullName>CH01</fullName>
                    <label>CH01 - BIOMERIEUX SUISSE S.A.</label>
                </value>
                <value>
                    <fullName>CL01</fullName>
                    <label>CL01 - UPS BMX CHILE S.A.</label>
                </value>
                <value>
                    <fullName>CN01</fullName>
                    <label>CN01 - BIOMERIEUX SHANGHAI BIOTECH</label>
                </value>
                <value>
                    <fullName>CN02</fullName>
                    <label>CN02 - BIOMERIEUX SHANGHAI CO., LTD</label>
                </value>
                <value>
                    <fullName>CN03</fullName>
                    <label>CN03 - BIOMERIEUX SHANGHAI CO., LTD</label>
                </value>
                <value>
                    <fullName>CO01</fullName>
                    <label>CO01 - BIOMERIEUX COLOMBIA S.A.S</label>
                </value>
                <value>
                    <fullName>CZ01</fullName>
                    <label>CZ01 - BIOMERIEUX CZ S.R.O.</label>
                </value>
                <value>
                    <fullName>CZ02</fullName>
                    <label>CZ02 - Alliance Healthcare s.r.o</label>
                </value>
                <value>
                    <fullName>DE01</fullName>
                    <label>DE01 - BIOMERIEUX DEUTSCHLAND GMBH</label>
                </value>
                <value>
                    <fullName>DK01</fullName>
                    <label>DK01 - BIOMERIEUX DENMARK APS</label>
                </value>
                <value>
                    <fullName>ES01</fullName>
                    <label>ES01 - BIOMERIEUX ESPANA S.A.</label>
                </value>
                <value>
                    <fullName>ES03</fullName>
                    <label>ES03 - BIOMERIEUX TRES CANTOS</label>
                </value>
                <value>
                    <fullName>FI01</fullName>
                    <label>FI01 - BIOMERIEUX SUOMI OY</label>
                </value>
                <value>
                    <fullName>FR01</fullName>
                    <label>FR01 - BIOMERIEUX Craponne</label>
                </value>
                <value>
                    <fullName>FR02</fullName>
                    <label>FR02 - BIOMERIEUX La Balme</label>
                </value>
                <value>
                    <fullName>FR03</fullName>
                    <label>FR03 - BIOMERIEUX Marcy</label>
                </value>
                <value>
                    <fullName>FR04</fullName>
                    <label>FR04 - BIOMERIEUX Grenoble</label>
                </value>
                <value>
                    <fullName>FR05</fullName>
                    <label>FR05 - BIOMERIEUX IDC 1</label>
                </value>
                <value>
                    <fullName>FR06</fullName>
                    <label>FR06 - BIOMERIEUX IDC 2</label>
                </value>
                <value>
                    <fullName>FR07</fullName>
                    <label>FR07 - BIOMERIEUX IDC 3</label>
                </value>
                <value>
                    <fullName>FR08</fullName>
                    <label>FR08 - BIOMERIEUX Combourg</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PositionStatus_c__c</fullName>
        <externalDeveloperName>PositionStatus__c</externalDeveloperName>
        <label>Position Status</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>030</fullName>
                    <label>030 S-Sold</label>
                </value>
                <value>
                    <fullName>031</fullName>
                    <label>031 S-Equipment NORA</label>
                </value>
                <value>
                    <fullName>032</fullName>
                    <label>032 S-Equipment Reagent Lease</label>
                </value>
                <value>
                    <fullName>033</fullName>
                    <label>033 S-Equipment Lease</label>
                </value>
                <value>
                    <fullName>040</fullName>
                    <label>040 R-Rented</label>
                </value>
                <value>
                    <fullName>050</fullName>
                    <label>050 D-Demo</label>
                </value>
                <value>
                    <fullName>055</fullName>
                    <label>055 D-Evaluation</label>
                </value>
                <value>
                    <fullName>060</fullName>
                    <label>060 I-Internal Use</label>
                </value>
                <value>
                    <fullName>070</fullName>
                    <label>070 P-Placed</label>
                </value>
                <value>
                    <fullName>090</fullName>
                    <label>090 X-Sold to another cie e.g Coag</label>
                </value>
                <value>
                    <fullName>100</fullName>
                    <label>100 X-lost at customer site</label>
                </value>
                <value>
                    <fullName>110</fullName>
                    <label>110 X-lost at biomerieux</label>
                </value>
                <value>
                    <fullName>200</fullName>
                    <label>200 X-scrapped by customer</label>
                </value>
                <value>
                    <fullName>210</fullName>
                    <label>210 X-scrapped at bMx facility</label>
                </value>
                <value>
                    <fullName>010</fullName>
                    <label>010 W-In Stock</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <externalDeveloperName>Price</externalDeveloperName>
        <label>Price</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product2Id__c</fullName>
        <externalDeveloperName>Product2Id</externalDeveloperName>
        <label>Product ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <externalDeveloperName>ProductCode</externalDeveloperName>
        <label>Product Code</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductFamily_TECH_c__c</fullName>
        <externalDeveloperName>ProductFamily_TECH__c</externalDeveloperName>
        <label>Product Family (tech)</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PurchaseDate__c</fullName>
        <externalDeveloperName>PurchaseDate</externalDeveloperName>
        <label>Purchase Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QualificationReference_c__c</fullName>
        <externalDeveloperName>QualificationReference__c</externalDeveloperName>
        <label>Qualification Reference</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_c__c</fullName>
        <externalDeveloperName>Qualification__c</externalDeveloperName>
        <label>Qualification</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INITIAL</fullName>
                </value>
                <value>
                    <fullName>PERIODIQUE</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <externalDeveloperName>Quantity</externalDeveloperName>
        <label>Quantity</label>
        <precision>12</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <externalDeveloperName>RecordTypeId</externalDeveloperName>
        <label>Record Type ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceDocLocalisation_c__c</fullName>
        <externalDeveloperName>ReferenceDocLocalisation__c</externalDeveloperName>
        <label>Reference Doc Localisation</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requesters_Email_c__c</fullName>
        <externalDeveloperName>Requesters_Email__c</externalDeveloperName>
        <label>Requester's Email</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ResourceUserId_c__c</fullName>
        <externalDeveloperName>ResourceUserId__c</externalDeveloperName>
        <label>Resource User ID</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RoHS_c__c</fullName>
        <externalDeveloperName>RoHS__c</externalDeveloperName>
        <inlineHelpText>RoHS Compliance level</inlineHelpText>
        <label>RoHS</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>Not Relevant</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>In Process</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Not Compliant</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Compliant</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Compliant with Exclusion</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RoHS_compliant_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>RoHS_compliant__c</externalDeveloperName>
        <inlineHelpText>RoHS compliance indicator for Equipment assets</inlineHelpText>
        <label>RoHS compliant</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RootAssetId__c</fullName>
        <externalDeveloperName>RootAssetId</externalDeveloperName>
        <label>Root Asset ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAPCustomerNumber_c__c</fullName>
        <externalDeveloperName>SAPCustomerNumber__c</externalDeveloperName>
        <label>SAP Customer Number</label>
        <length>32</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Asset_Number_c__c</fullName>
        <externalDeveloperName>SAP_Asset_Number__c</externalDeveloperName>
        <label>SAP Asset Number</label>
        <length>32</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_BOMCategory_c__c</fullName>
        <externalDeveloperName>SAP_BOMCategory__c</externalDeveloperName>
        <label>BOM Category</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>D</fullName>
                    <label>Document Structure</label>
                </value>
                <value>
                    <fullName>E</fullName>
                    <label>Equipment BOM</label>
                </value>
                <value>
                    <fullName>K</fullName>
                    <label>Order BOM</label>
                </value>
                <value>
                    <fullName>M</fullName>
                    <label>Material BOM</label>
                </value>
                <value>
                    <fullName>S</fullName>
                    <label>Standard BOM</label>
                </value>
                <value>
                    <fullName>T</fullName>
                    <label>Functional Location BOM</label>
                </value>
                <value>
                    <fullName>P</fullName>
                    <label>Work Breakdown Structure BOM</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_BOMItem_c__c</fullName>
        <externalDeveloperName>SAP_BOMItem__c</externalDeveloperName>
        <label>BOM Item number</label>
        <length>50</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_BOMNumber_c__c</fullName>
        <externalDeveloperName>SAP_BOMNumber__c</externalDeveloperName>
        <label>BOM Number</label>
        <length>50</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_System_Address_City_c__c</fullName>
        <externalDeveloperName>SAP_System_Address_City__c</externalDeveloperName>
        <label>SAP System Address City</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_System_Address_Country_c__c</fullName>
        <externalDeveloperName>SAP_System_Address_Country__c</externalDeveloperName>
        <label>SAP System Address Country</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_System_Address_District_c__c</fullName>
        <externalDeveloperName>SAP_System_Address_District__c</externalDeveloperName>
        <label>SAP System Address District</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
</CustomObject>